--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,9 +15,11 @@ params:
   portfolio:
     columns:
       desktop:
-        default: 3
-      mobile:
         default: 2
+        archive: 6
+      mobile:
+        default: 1
+        archive: 3
   socials:
     # todo: add your social accounts.
     - icon: "far fa-brands fa-instagram fa-lg"
@@ -29,9 +31,10 @@ params:
     - icon: "far fa-envelope fa-lg"
       url: "mailto:neil.stoddard@gmail.com"
       landing: true
-  homepage: "/all"
+  homepage: "/flora"
   specialPages:
-    - all
+    - work
+    - archive
   bypassWelcomePage: true # redirects "/" to "homepage" when it's true.
   plausible: "" # todo: set your plausible id.
   disableWelcomePageBackground: false # disables the background image on the homepage
@@ -53,8 +56,8 @@ permalinks:
 
 menu:
   main:
-    - name: all
-      url: /all/
+    - name: work
+      url: /work/
       weight: 1
     - name: flora
       url: /tags/flora/
@@ -62,12 +65,18 @@ menu:
     - name: fauna
       url: /tags/fauna/
       weight: 3
-    - name: landscapes
-      url: /tags/landscapes/
+    - name: people
+      url: /tags/people/
       weight: 4
-    - name: other
-      url: /tags/other/
+    - name: place
+      url: /tags/place/
       weight: 5
+    - name: object
+      url: /tags/object/
+      weight: 6
+    - name: archive
+      url: /tags/archive/
+      weight: 7
     - name: about
       url: /about/
-      weight: 6
+      weight: 7
