--- a/hugo.yaml
+++ b/hugo.yaml
@@ -31,7 +31,7 @@ params:
     - icon: "far fa-envelope fa-lg"
       url: "mailto:neil.stoddard@gmail.com"
       landing: true
-  homepage: "/flora"
+  homepage: "/work"
   specialPages:
     - work
     - archive
