--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://neilstoddard.com/"
 languageCode: "en-us"
-title: "Neil Stoddard"
+title: "Neil Stoddard Photography"
 theme: "eternity"
 googleAnalytics: "G-6Y51KXLFDM"
 
